Updated Security folder